--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "npm": "8.1.3"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^1.4.0",
     "express": "^4.17.1",
+    "mongoose": "^6.0.12",
+    "nodemon": "^2.0.15",
     "passport": "^0.5.0",
     "passport-google-oauth20": "^2.0.0"
   }
